--- a/src/Resources/assets/css/app.css
+++ b/src/Resources/assets/css/app.css
@@ -2,8 +2,67 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: "booking";
+    src: url("../fonts/booking.woff") format("woff");
+    font-weight: bold;
+    font-style: normal;
+    font-display: block;
+}
+
 @layer components {
-    .icon-calendar:before {
-        content: "\e909";
+    [class^="icon-"],
+    [class*=" icon-"] {
+        /* use !important to prevent issues with browser extensions that change fonts */
+        font-family: "booking" !important;
+        speak: never;
+        font-style: normal;
+        font-weight: normal;
+        font-variant: normal;
+        text-transform: none;
+        line-height: 1;
+        color: #6b7280;
+
+        /* Better Font Rendering =========== */
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        line-height: 1 !important;
     }
+
+    html.dark [class^="icon-"],
+    html.dark [class*=" icon-"] {
+        color: #d1d5db;
+    }
+
+    .icon-list:before {
+        content: "\e953";
+    }
+    .icon-clock:before {
+        content: "\e952";
+    }
+
+    .primary-button {
+        @apply flex gap-x-1 items-center px-3 py-1.5 bg-blue-600 border border-blue-700 rounded-md text-gray-50 font-semibold cursor-pointer transition-all hover:opacity-[0.9] focus:opacity-[0.9];
+    }
+}
+
+.ltr\:pl-\[286px\]:where([dir="ltr"], [dir="ltr"] *) {
+    padding-left: 286px;
+}
+.sidebar-collapsed
+    .group-\[\.sidebar-collapsed\]\/container\:ltr\:pl-\[85px\]:where(
+        [dir="ltr"],
+        [dir="ltr"] *
+    ) {
+    padding-left: 85px !important;
+}
+.ltr\:pl-\[286px\]:where([dir="rtl"], [dir="rtl"] *) {
+    padding-right: 286px;
+}
+.sidebar-collapsed
+    .group-\[\.sidebar-collapsed\]\/container\:ltr\:pl-\[85px\]:where(
+        [dir="rtl"],
+        [dir="rtl"] *
+    ) {
+    padding-right: 85px !important;
 }
