--- a/src/Resources/assets/css/app.css
+++ b/src/Resources/assets/css/app.css
@@ -34,6 +34,10 @@
         color: #d1d5db;
     }
 
+    .icon-phone-number:before {
+        content: "\e955";
+    }
+
     .icon-list:before {
         content: "\e953";
     }
